<resources>
    <string name="app_name">Game</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_image">Welcome image</string>
    <string name="game">Game</string>
    <string name="game_rules">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
        Le Lorem Ipsum est le faux texte standard de l\'imprimerie depuis les années 1500, quand un imprimeur anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de text.
        Il n\'a pas fait que survivre cinq siècles, mais s\'est aussi adapté à la bureautique informatique, sans que son contenu n\'en soit modifié.\n\n
        Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</string>
    <string name="button_ok">OK</string>
    <string name="choose_level">Choose Level:</string>
    <string name="test_button_level">TEST</string>
    <string name="easy_button_level">EASY</string>
    <string name="middle_button_level">MIDDLE</string>
    <string name="hard_button_level">HARD</string>
    <string name="game_result_image">Game result</string>
    <string name="required_number_of_correct_answers">Required number of correct answers: %s</string>
    <string name="score_s">Score: %s</string>
    <string name="right_answers_perc">Right answers %s from: %s</string>
    <string name="perc_of_the_right_answers">Correct answers %s (min %s)</string>
    <string name="button_restart">RESTART</string>
    <string name="question_mark">\?</string>
    <string name="required_percentage_of_correct_answers_s">Required percentage of correct answers: %s</string>
    <string name="percentage_of_right_answers_s">Percentage of right answers: %s</string>
</resources>